--- a/package.json
+++ b/package.json
@@ -1,22 +1,10 @@
 {
-  "name": "electron-quick-start",
-  "version": "1.0.0",
-  "description": "A minimal Electron application",
-  "main": "main.js",
-  "scripts": {
-    "start": "electron ."
-  },
-  "repository": "https://github.com/electron/electron-quick-start",
-  "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
-  ],
-  "author": "GitHub",
-  "license": "CC0-1.0",
-  "devDependencies": {
-    "electron": "^1.4.1"
-  }
+    "name": "Markdown-Reader",
+    "productName": "Markdown Reader",
+    "version": "0.1.0",
+    "description": "A minimal Markdown viewer",
+    "scripts": {
+        "start": "electron ."
+    },
+    "main": "main.js"
 }
